--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,16 +22,21 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Generate Prisma Client
+        run: npx prisma generate
+        env:
+          DATABASE_URL: ${{ secrets.PRISMA_DATABASE_URL }}
+
       - name: Run build (CI check)
         run: npm run build
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
       # Optional: Run drizzle migrations before deploy
-      - name: Run Drizzle Migrations
-        run: npx drizzle-kit push
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      # - name: Run Drizzle Migrations
+      #   run: npx drizzle-kit push
+      #   env:
+      #     DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
       - name: Deploy to Vercel
         run: |
