--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,47 +1,47 @@
-name: Deploy Next.js to Vercel
+# name: Deploy Next.js to Vercel
 
-on:
-  push:
-    branches:
-      - main
-      - develop
-  workflow_dispatch:
+# on:
+#   push:
+#     branches:
+#       - main
+#       - develop
+#   workflow_dispatch:
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: 20
 
-      - name: Install dependencies
-        run: npm ci
+#       - name: Install dependencies
+#         run: npm ci
 
-      - name: Generate Prisma Client
-        run: npx prisma generate
-        env:
-          DATABASE_URL: ${{ secrets.PRISMA_DATABASE_URL }}
+#       - name: Generate Prisma Client
+#         run: npx prisma generate
+#         env:
+#           DATABASE_URL: ${{ secrets.PRISMA_DATABASE_URL }}
 
-      - name: Run build (CI check)
-        run: npm run build
-        env:
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+#       - name: Run build (CI check)
+#         run: npm run build
+#         env:
+#           DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
-      # Optional: Run drizzle migrations before deploy
-      # - name: Run Drizzle Migrations
-      #   run: npx drizzle-kit push
-      #   env:
-      #     DATABASE_URL: ${{ secrets.DATABASE_URL }}
+#       # Optional: Run drizzle migrations before deploy
+#       # - name: Run Drizzle Migrations
+#       #   run: npx drizzle-kit push
+#       #   env:
+#       #     DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
-      - name: Deploy to Vercel
-        run: |
-          if [ "${GITHUB_REF##*/}" = "main" ]; then
-            npx vercel --prod --confirm --scope ${{ secrets.VERCEL_ORG_ID }} --token ${{ secrets.VERCEL_TOKEN }}
-          else
-            npx vercel --confirm --scope ${{ secrets.VERCEL_ORG_ID }} --token ${{ secrets.VERCEL_TOKEN }}
-          fi
+#       - name: Deploy to Vercel
+#         run: |
+#           if [ "${GITHUB_REF##*/}" = "main" ]; then
+#             npx vercel --prod --confirm --scope ${{ secrets.VERCEL_ORG_ID }} --token ${{ secrets.VERCEL_TOKEN }}
+#           else
+#             npx vercel --confirm --scope ${{ secrets.VERCEL_ORG_ID }} --token ${{ secrets.VERCEL_TOKEN }}
+#           fi
