--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/html": "^0.0.11",
     "@react-email/preview": "^0.0.13",
+    "@react-email/render": "^1.3.1",
     "@react-email/tailwind": "^1.2.2",
     "@types/nodemailer": "^7.0.2",
     "better-auth": "^1.3.10",
