--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.6",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
@@ -51,7 +52,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -59,7 +60,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "prisma": "^6.16.2",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.14",
     "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
