--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "better-auth": "^1.3.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "framer-motion": "^12.23.12",
@@ -43,10 +44,12 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2",
     "zod": "^4.1.9"
   },
   "devDependencies": {
