--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "drizzle-orm": "^0.44.5",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.544.0",
+    "nanoid": "^5.1.6",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.6",
