--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@react-email/tailwind": "^1.2.2",
     "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-table": "^8.21.3",
     "@trpc/client": "^11.6.0",
     "@trpc/server": "^11.6.0",
     "@trpc/tanstack-react-query": "^11.6.0",
